# pytest-random-order

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASING.rst  pyproject.toml  pytest.ini  pytest_random_order.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-package.yml  deploy.yml  publish-package.yml  python-package.yml  test.yml
docs/: conf.py  index.rst
pytest_random_order/: bucket_types.py  cache.py  plugin.py  shuffler.py
random_order/: __init__.py  bucket_types.py  cache.py  config.py  plugin.py  shuffler.py  xdist.py
tests/: conftest.py  test_actual_test_runs.py  test_cli.py  test_doctests.py  test_markers.py  test_plugin_failure.py  test_random_order.py  test_shuffle.py  test_xdist.py
